[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/SwitchPlayerComponent/SwitchPlayerComponent.gd" type="Script" id=1]
[ext_resource path="res://UI/SwitchPlayerComponent/SwitchButton.gd" type="Script" id=2]

[node name="SwitchPlayerComponent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LeftButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 12.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="RightButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 16.0
margin_right = 28.0
margin_bottom = 40.0
script = ExtResource( 2 )
is_right = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
